# Algoritmos-Avancados

./: .gitignore  README.md
Dijkstra/: Makefile  README.md  benchmark.py  dijkstra  generate_plots.py  main.cpp  performance_metrics.csv  performance_metrics_A.csv  performance_metrics_B.csv  performance_metrics_C.csv  performance_metrics_D.csv  run_tests
Dijkstra/include/: Dijkstra.hpp  KaryMinHeap.hpp  SparseGraph.hpp
Dijkstra/reports/: report_dimacs_real.csv  report_operations.csv  report_time_fixed_m.csv  report_time_fixed_n.csv  suiteA_graph4_mean_case_data_n100000.csv  suiteA_graph4_mean_case_data_n250000.csv
Dijkstra/tests/: test_dijkstra.cpp  test_graph.cpp  test_heap.cpp
Fluxos/: CMakeLists.txt  analyze_results.py  complexity_analysis_report.md  main.cpp
Fluxos/experiments/: new_washington.c  run_experiments.pl
Fluxos/experiments/reports/: final_complexity_report.csv  final_complexity_report_20260426_221932.csv  final_complexity_report_20260426_231558.csv
Fluxos/src/: CapacityScaling.cpp  DimacsParser.cpp  Dinitz.cpp  EdmondsKarp.cpp  FattestPath.cpp  FlowNetwork.cpp  FordFulkersonDFS.cpp  FordFulkersonRandDFS.cpp
Fluxos/src/include/: DimacsParser.hpp  FlowNetwork.hpp  IndexedMaxHeap.hpp  MaxFlowSolver.hpp  MaxFlowSolvers.hpp
Fluxos/tests/: DimacsParser_test.cpp  FlowNetwork_test.cpp  IndexedMaxHeap_test.cpp  MaxFlowSolvers_test.cpp  MetricsReport_test.cpp
Relatorios/: modelo.tex  r.aux  r.fdb_latexmk  r.fls  r.out  r.tex
Relatorios/Dijkstra/: r.fls  r.out  r.tex
Relatorios/Fluxos/: r.aux  r.fdb_latexmk  r.fls  r.out  r.tex
